--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,26 +1,42 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: "Zen Antique";
+  src: url("https://fonts.googleapis.com/css2?family=Zen+Antique&display=swap");
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "GapyeongHanseokbong";
+  src: url("/fonts/GapyeongHanseokbongR.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "GapyeongHanseokbong";
+  src: url("/fonts/GapyeongHanseokbongB.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@theme {
+  --text-basegray: var(--basegray);
+  --font-korean: var(--korean);
+  --font-chinese: var(--chinese);
+}
+
 :root {
-  --background: #ffffff;
+  --background: #f3f2ef;
   --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --basegray: #424242;
+  --korean: "GapyeongHanseokbong", sans-serif;
+  --chinese: "Zen Antique", sans-serif;
 }
 
 body {
   background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  color: var(--basegray);
+  font-family: var(--korean);
+  font-weight: 700;
 }
